# rs-htmx

./: .gitattributes  .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
src/: assets.rs  errors.rs  items.rs  lib.rs  main.rs
templates/: about.html  base.html  home.html  toast.html
templates/list/: form.html  item.html
templates/nav/: item.html
templates/shared/: headings.html
